--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>CSTU</title>
   <!-- Custom Styles -->
   <link rel="icon" type="image/x-icon" href="../favicon.ico">
-  <link rel="stylesheet" href="../css/cstu.css">
-  <link rel="stylesheet" href="../css/cstu_grid.css">
+  <link rel="stylesheet" href="css/cstu.css">
+  <link rel="stylesheet" href="css/cstu_grid.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.css">
 </head>
@@ -37,12 +37,12 @@
       <div class="column">
 
         <div>
-          <img src="../cstu_images/temp_campus.jpg">
+          <img src="cstu_images/temp_campus.jpg">
           <p>Temporary Campus</p>
         </div>
 
         <div>
-          <img src="../cstu_images/vcwithpresident.jpg" alt="">
+          <img src="cstu_images/vcwithpresident.jpg" alt="">
           <p>VC with Ex-C </p>
         </div>
 
@@ -50,12 +50,12 @@
 
       <div class="column">
         <div>
-          <img src="../cstu_images/lab1.jpg">
+          <img src="cstu_images/lab1.jpg">
           <p>Lab</p>
         </div>
 
         <div>
-          <img src="../cstu_images/classroom.jpg">
+          <img src="cstu_images/classroom.jpg">
           <p>Classroom</p>
         </div>
       </div>
