--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script type="text/javascript">
-    $('#header').load('header.html');
+    $('#header').load('pages/header.html');
   </script>
   <script type="text/javascript">
-    $('#footer').load('footer.html');
+    $('#footer').load('pages/footer.html');
   </script>
 
   <script src="..\js\header.js"></script>
